      * directives take a hash
      * skip is now a first class result outcome alone with pass and fail
      * each directive has its own reason
      * boolean overloading refers to if the result is to be considered pass or fail
      * new_result() is now simply new()
      * lots more

    New Features
    * Results are now editable, including their outcome.


2.00_07  Mon, 28 Feb 2011 23:53:22 +1100
    Incompatible Changes (since 2.00_01)
    * TB2::Event::Log now uses symbolic levels, not numeric.  This lets us
      add new levels later. [github 111]
    * Event log levels have been lower cased.
    * The emergency and critical log levels have been removed.  They didn't have
      a use case.
    * TB2::Event::Log->levels now returns in order from lowest to highest.

    New Features
    * Added TB2::Event::Log->between_levels() to compare log levels.
    * The TAP formatter now respects log events.
    * Test::Builder->diag and ->note now use log events and the
      formatter.

    Documentation
    * The suggested meanings of event log levels are now documented.

    Bug Fixes
    * Fixed a skip() or todo_skip() called before a plan.  [github 132]


2.00_06  Thu, 27 Jan 2011 09:58:35 +1000
    Incompatible Changes (since 2.00_01)
    * The EventCoordinator now only has one history object.
      histories() is now history().  clear_history() and add_histories()
      are gone. [github 115]
    * Subtest handling has been removed from the TAP formatter.  The design
      was wrong.  It will come back later in a better form [github 120]
    * Test::Builder2::Counter, History and Formatter are no longer singletons.
      This is unnecessary, use the objects provided by your EventCoordinator.
      [github 117]
    * stream_depth() is now a method on the History object, not the TAP
      formatter.  This makes it available to all event watchers. [github 118]
    * history is now posted events before the formatter.  This lets the